--- a/source/index.html
+++ b/source/index.html
@@ -171,6 +171,38 @@
             </div>
           </li>
         </ul>
+        <ol class='slider-pagination'>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>1 фото</span>
+            </button>
+          </li>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>2 фото</span>
+            </button>
+          </li>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>3 фото</span>
+            </button>
+          </li>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>4 фото</span>
+            </button>
+          </li>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>5 фото</span>
+            </button>
+          </li>
+          <li class='slider-pagination__item'>
+            <button class='slider-pagination__btn' type='button'>
+              <span class='visually-hidden'>6 фото</span>
+            </button>
+          </li>
+        </ol>
       </div>
     </section>
 
