стилизация главной страницы - настольная версия

--- a/source/index.html
+++ b/source/index.html
@@ -117,10 +117,10 @@
         <div class='type-ladder__top'>
           <h2 class='type-ladder__title title-decorate'>Типы лестниц</h2>
           <div class='type-ladder__wrapper-btn'>
-            <button class='type-ladder__btn' type='button'>
+            <button class='type-ladder__btn type-ladder__btn--back' type='button'>
               <span class='visually-hidden'>показать предыдущие типы лестниц</span>
             </button>
-            <button class='type-ladder__btn' type='button'>
+            <button class='type-ladder__btn type-ladder__btn--next' type='button'>
               <span class='visually-hidden'>показать следующие типы лестниц</span>
             </button>
           </div>
@@ -130,7 +130,7 @@
             <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-1.png' srcset='img/index/type-ladder/slider-img-1@2x.png 2x' alt='прямая лестница'>
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Прямая лестница</h3>
-              <p class='type-ladder__price'><pre>от   <b>18 000</b>   ₽ за м. п.</pre></p>
+              <p class='type-ladder__price'>от <b>18 000 </b>₽ за м. п.</p>
               <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
             </div>
           </li>
@@ -138,7 +138,7 @@
             <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-2.png' srcset='img/index/type-ladder/slider-img-2@2x.png 2x' alt='Забежная лестница'>
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Забежная лестница</h3>
-              <p class='type-ladder__price'><pre>от   <b>27 000</b>   ₽ за м. п.</pre></p>
+              <p class='type-ladder__price'>от <b>27 000</b> ₽ за м. п.</p>
               <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
             </div>
           </li>
@@ -146,7 +146,7 @@
             <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-3.png' srcset='img/index/type-ladder/slider-img-3@2x.png 2x' alt='Винтовая лестница'>
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Винтовая лестница</h3>
-              <p class='type-ladder__price'><pre>от   <b>30 000</b>   ₽ за м. п.</pre></p>
+              <p class='type-ladder__price'>от <b>30 000</b> ₽ за м. п.</p>
               <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
             </div>
           </li>
@@ -154,7 +154,7 @@
             <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-4.png' srcset='img/index/type-ladder/slider-img-4@2x.png 2x' alt='Фасадная лестница'>
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Фасадная лестница</h3>
-              <p class='type-ladder__price'><pre>от   <b>50 000</b>   ₽ за м. п.</pre></p>
+              <p class='type-ladder__price'>от <b>50 000</b> ₽ за м. п.</p>
               <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
             </div>
           </li>
@@ -162,7 +162,7 @@
             <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-5.png' srcset='img/index/type-ladder/slider-img-5@2x.png 2x' alt='Зеркальная лестница'>
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Зеркальная лестница</h3>
-              <p class='type-ladder__price'><pre>от   <b>45 000</b>   ₽ за м. п.</pre></p>
+              <p class='type-ladder__price'>от <b>45 000</b> ₽ за м. п.</p>
               <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
             </div>
           </li>
@@ -229,7 +229,9 @@
 
     <section class='about-us'>
       <div class='about-us__container'>
+
         <h2 class='about-us__title title-decorate'>Почему стоит обратиться к нам</h2>
+        <div class='about-us__content-wrapper'>
         <div class='about-us__description'>
         <b class='about-us__motto'>Мы воплощаем ваши идеи в реальность</b>
         <p class='about-us__text'>Популярность монолитных лестничных систем
@@ -241,7 +243,7 @@
           Популярность монолитных лестничных систем
           из железобетона в современном строительстве очень высока. </p>
         </div>
-        <div>
+        <div class='about-us__column-center'>
           <h3 class='about-us__subtitle'>Наша специализация:</h3>
           <ul class='about-us__list'>
             <li class='about-us__item about-us__item--design'>
@@ -257,12 +259,15 @@
         </div>
         <img class='about-us__img' src='img/index/about-us/stair.jpg' srcset='img/index/about-us/stair@2x.jpg 2x' width='380' height='384' alt='винтовая лестница с коричневыми ступенями и белыми вставками'>
       </div>
+    </div>
     </section>
 
     <section class='examples'>
       <div class='examples__bg-decorate'>
-      <div class='examples__container'>
-        <h2 class='examples__title title-decorate'>Примеры наших работ</h2>
+        <div class='examples__container'>
+
+        <h2 class='examples__title title-decorate'>Примеры<br> наших работ</h2>
+
         <div class='examples__left-column'>
           <p class='examples__description'>Прямая лестница в новом доме, г. Нижний Новгород</p>
           <dl>
@@ -282,7 +287,7 @@
         </div>
         <div class='examples__right-column'>
           <ul class='examples__list'>
-            <li class='examples__item'>
+            <li class='examples__item examples__item--current'>
               <img class='examples__img' src='img/index/examples/slider-photo-1.jpg' srcset='img/index/examples/slider-photo-1@x.jpg 2x' width='380' height='490' alt=''>
             </li>
             <li class='examples__item'>
@@ -292,11 +297,12 @@
               <img class='examples__img' src='img/index/examples/slider-photo-3.jpg' srcset='img/index/examples/slider-photo-3@x.jpg 2x' width='380' height='490' alt=''>
             </li>
           </ul>
+          <div>
           <div class='examples__wrapper-btn'>
-            <button class='examples__btn' type='button'>
+            <button class='examples__btn examples__btn--back' type='button'>
               <span class='visually-hidden'>предыдущее фото</span>
             </button>
-            <button class='examples__btn' type='button'>
+            <button class='examples__btn examples__btn--next' type='button'>
               <span class='visually-hidden'>следующее фото</span>
             </button>
           </div>
@@ -323,21 +329,21 @@
             </li>
           </ol>
         </div>
+        </div>
       </div>
     </div>
     </section>
 
     <section class='monolithic'>
       <div class='monolithic__container'>
-        <h2 class='monolithic__title '>Преимущества монолитных лестниц</h2>
-        </div>
-        <div class='monolithic__container monolithic__container--image'>
+        <h2 class='monolithic__title title-decorate'>Преимущества<br> монолитных лестниц</h2>
+        <div class='monolithic__wrapper-image'>
         <picture>
-          <source media='(min-width: 1440px)' srcset='img/index/monolithic/stairs-desktop.jpg 1x, img/index/monolithic/stairs-desktop@2x.jpg 2x'>
-          <img class='monilithic__img' src='img/index/monolithic/stairs-mobile.jpg' srcset='img/index/monolithic/stairs-mobile@2x.jpg 2x' width='420' height='470' alt='монолитная прямая лестница изображение в профиль'>
+          <source media='(min-width: 1440px)' srcset='img/index/monolithic/stairs-desktop.jpg 1x, img/index/monolithic/stairs-desktop@2x.jpg 2x' width='553' height='634'>
+          <img class='monolithic__img' src='img/index/monolithic/stairs-mobile.jpg' srcset='img/index/monolithic/stairs-mobile@2x.jpg 2x' width='420' height='470' alt='монолитная прямая лестница изображение в профиль'>
         </picture>
       </div>
-        <div class='monolithic__container'>
+        <div class='monolithic__wrapper-description'>
         <ul class='monolithic__list'>
           <li class='monolithic__item'>
             <h3 class='monolithic__subtitle'>Долговечность и надежность</h3>
@@ -365,6 +371,7 @@
             <p class='monolithic__description'>Бетон, из которого изготавливаются монолитные бетонные лестницы не горючий, огнеупорный материал.</p>
           </li>
         </ul>
+      </div>
       </div>
     </section>
 
@@ -402,13 +409,13 @@
     <section class='questions'>
       <div class='questions__container'>
         <div class='questions__wrapper-map'>
-          <img src='img/index/question/map.jpg' srcset='img/index/question/map@2x.jpg 2x' width='725' height='560' alt='г. Нижний Новгород ул. Интернациональная, 100'>
-          <iframe class='questions__map' src="https://yandex.ru/map-widget/v1/?ll=43.948862%2C56.309831&mode=whatshere&whatshere%5Bpoint%5D=43.948351%2C56.310043&whatshere%5Bzoom%5D=17&z=16.4" width="725" height="560" allowfullscreen="" style="position:relative;"></iframe>
+          <img class='questions__map' src='img/index/question/map.jpg' srcset='img/index/question/map@2x.jpg 2x' width='709' height='544' alt='г. Нижний Новгород ул. Интернациональная, 100'>
+          <iframe src="https://yandex.ru/map-widget/v1/?ll=43.948862%2C56.309831&mode=whatshere&whatshere%5Bpoint%5D=43.948351%2C56.310043&whatshere%5Bzoom%5D=17&z=16.4" width="709" height="544" allowfullscreen="" style="position:relative;"></iframe>
         </div>
         <div>
           <h2 class='questions__title title-decorate'>У вас остались вопросы?</h2>
+          <p class='questions__text'>Не нашли нужной информации? Интересует что-то конкретное? Напишите нам и наши специалисты ответят вам в течении 30 минут!</p>
           <form class='questions__form' action='#' method='post'>
-            <p class='questions__text'>Не нашли нужной информации? Интересует что-то конкретное? Напишите нам и наши специалисты ответят вам в течении 30 минут!</p>
             <label class='visually-hidden' for='first-name'>ваше имя</label>
             <input type='text' id='first-name' name='name' placeholder='Ваше имя...' required>
             <label class='visually-hidden' for='tel'>ваш номер телефона</label>
@@ -436,7 +443,7 @@
           </div>
           <span>Монолитные лестницы</span>
         </div>
-        <div class='footer__column__center'>
+        <div class='footer__column-center'>
           <ul class='footer__navigation-list'>
             <li class='footer__navigation-item'>
               <a class='footer__navigation-link' href='#'>О компании</a>
@@ -457,7 +464,7 @@
             </li>
           </ul>
         </div>
-        <div class='footer__column__right'>
+        <div class='footer__column-right'>
           <a class='footer__phone' href='tel:+79302835065'>+7 (930) 283-50-65</a>
           <button class='footer__btn btn-main-style' type='button'>Перезвоните мне!</button>
         </div>
