Завершена верстка страницы "О компании"

--- a/source/index.html
+++ b/source/index.html
@@ -37,7 +37,7 @@
         <nav class='navigation navigation--nojs navigation--close'>
           <ul class='navigation__list'>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>О компании</a>
+              <a class='navigation__link' href='company.html'>О компании</a>
             </li>
             <li class='navigation__item'>
               <a class='navigation__link' href='#'>Каталог</a>
@@ -446,7 +446,7 @@
         <div class='footer__column-center'>
           <ul class='footer__navigation-list'>
             <li class='footer__navigation-item'>
-              <a class='footer__navigation-link' href='#'>О компании</a>
+              <a class='footer__navigation-link' href='company.html'>О компании</a>
             </li>
             <li class='footer__navigation-item'>
               <a class='footer__navigation-link' href='#'>Каталог</a>
