стилизована мобильная версия страница "О компании"

--- a/source/company.html
+++ b/source/company.html
@@ -22,7 +22,7 @@
     <div class='header__bg-decorate'>
     <div class='header__container header__container--decorate-line'>
       <div class='header__wrapper-logo'>
-        <a class='header__logo'>
+        <a class='header__logo' href='index.html'>
           <img class='header__img' src='img/logo-header.svg' width='72' height='30' alt='Логотип сайта Лесенка 52'>
         </a>
         <p class='header__logo-text'>Проектирование Изготовление Монтаж</p>
@@ -78,13 +78,13 @@
             </ul>
             <a class='breadcrumbs__link breadcrumbs__link--to-main' href='index.html'>Вернуться на главную</a>
           </div>
-          <h1 class='about-company__title title-decorate'>О компании</h1>
+          <h1 class='about-company__title title-decorate title-decorate--about-company'>О компании</h1>
           <div>
             <div class='about-company__wrapper'>
               <span class='about-company__decorate-square'>декоративный элемент</span>
             </div>
             <div class='about-company__wrapper'>
-              <p class='about-company___motto'>Мы воплощаем вашиидеи в реальность</p>
+              <p class='about-company__motto'>Мы воплощаем ваши идеи в реальность</p>
               <p class='about-company__description'>Популярность монолитных лестничных систем
                 из железобетона в современном строительстве очень высока. Когда решите заказать эксклюзивную бетонную лестницу, главное — не ошибиться с выбором ее изготовителя.
                 Отдав предпочтение компании «Лесенка 52»,
@@ -154,7 +154,7 @@
     </section>
 
     <section class='model'>
-      <div class='model__container'>
+      <div class='model__container model__container--decorate-aboout-company'>
         <h2 class='model__title'>Получите 3d-визуализацию вашей будущей лестницы бесплатно!</h2>
         <p class='model__description'>Оставьте свои контактные данные и наш специалист свяжется свами в течении 15 минут!</p>
         <form class='model__form' action='#' method='post'>
@@ -173,7 +173,7 @@
     <section class='finished-projects'>
       <div class='finished-projects__container'>
         <div class='finished-projects__top'>
-        <h2 class='finished-projects__title'>Готовые проекты</h2>
+        <h2 class='finished-projects__title title-decorate'>Готовые проекты</h2>
         <div class='finished-projects__wrapper-btn'>
           <button class='finished-projects__btn finished-projects__btn--back' type='button'>
             <span class='visually-hidden'>показать предыдущие типы лестниц</span>
@@ -223,7 +223,7 @@
     <section class='reviews'>
       <div class='reviews__bg-decorate'>
         <div class='reviews__container'>
-          <h2 class='reviews__title'>Отзывы о нашей работе</h2>
+          <h2 class='reviews__title title-decorate'>Отзывы о нашей работе</h2>
           <div class='reviews__wrapper'>
             <div class='reviews__wrapper-btn'>
               <button class='reviews__btn reviews__btn--back' type='button'>
@@ -237,10 +237,12 @@
             <li class='reviews__item'>
               <img src='img/about-company/reviews/slider-photo-1.jpg' srcset='img/about-company/reviews/slider-photo-1@2x.jpg 2x' width='121' height='150' alt=''>
               <div class='reviews__content'>
-                <cite>Сергей Полозов</cite>
-                <span>Частый дом</span>
-                <p class='reviews__quote'>Добрый день! Хочу поблагодарить за отличную работу. Заказ был выполнен точно в оговоренный срок. Ребята работают грамотно, быстро и профессионально. Учитывают все особенности и пожелания заказчика. Большое спасибо!!!</p>
-                <a class='reviews__link' href='#'>Читать далее</a>
+                <div>
+                  <cite>Сергей Полозов</cite>
+                  <span>Частный дом</span>
+                </div>
+                <p>Добрый день! Хочу поблагодарить за отличную работу. Заказ был выполнен точно в оговоренный срок. Ребята работают грамотно, быстро и профессионально. Учитывают все особенности и пожелания заказчика. Большое спасибо!!!</p>
+                <a href='#'>Читать далее</a>
               </div>
             </li>
           </ul>
