Добавлена страница "Каталог"

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -37,10 +37,10 @@
         <nav class='navigation navigation--nojs navigation--close'>
           <ul class='navigation__list'>
             <li class='navigation__item'>
-              <a class='navigation__link'>О компании</a>
+              <a class='navigation__link' href='company.html'>О компании</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='catalog.html'>Каталог</a>
+              <a class='navigation__link'>Каталог</a>
             </li>
             <li class='navigation__item'>
               <a class='navigation__link' href='#'>Примеры работ</a>
@@ -64,92 +64,74 @@
 
   <main class='main'>
 
-    <section class='about-company'>
-      <div class='about-company__bg-decorate'>
-        <div class='about-company__container'>
+    <section class='catalog'>
+      <div class='catalog__bg-decorate'>
+        <div class='catalog__container'>
           <div class='breadcrumbs'>
             <ul class='breadcrumbs__list'>
               <li class='breadcrumbs__item'>
                 <a class='breadcrumbs__link' href='index.html'>Главная</a>
               </li>
               <li class='breadcrumbs__item'>
-                <a class='breadcrumbs__link breadcrumbs__link--current'>О компании</a>
+                <a class='breadcrumbs__link breadcrumbs__link--current'>Каталог</a>
               </li>
             </ul>
             <a class='breadcrumbs__link breadcrumbs__link--to-main' href='index.html'>Вернуться на главную</a>
           </div>
-          <h1 class='about-company__title title-decorate title-decorate--about-company'>О компании</h1>
-          <div class='about-company__box'>
-            <div class='about-company__wrapper'>
-              <span class='about-company__decorate-square'>декоративный элемент</span>
-            </div>
-            <div class='about-company__wrapper'>
-              <p class='about-company__motto'>Мы воплощаем ваши идеи в реальность</p>
-              <p class='about-company__description'>Популярность монолитных лестничных систем
-                из железобетона в современном строительстве очень высока. Когда решите заказать эксклюзивную бетонную лестницу, главное — не ошибиться с выбором ее изготовителя.
-                Отдав предпочтение компании «Лесенка 52»,
-                вы найдете в нашем лице надежного партнера,
-                с отличной репутацией, предлагающего лучшие в регионе качество и расценки.
-              </p>
-              <p class='about-company__description'>Популярность монолитных лестничных систем
-                из железобетона в современном строительстве очень высока.
-              </p>
-            </div>
-            <div class='about-company__wrapper'>
-              <h3 class='about-company__subtitle'>Наша деятельность в цифрах:</h3>
-              <ul class='about-company__list'>
-                <li class='about-company__item'>
-                  <span><b>&lt;15</b> лет</span>
-                  <p class='about-company__text'>Надежной работы</p>
-                </li>
-                <li class='about-company__item'>
-                  <span>более <b>358</b></span>
-                  <p class='about-company__text'>Довольных клиентов</p>
-                </li>
-                <li class='about-company__item'>
-                  <span>более <b>423</b></span>
-                  <p class='about-company__text'>Проектов выполнено</p>
-                </li>
-              </ul>
-            </div>
-          </div>
-          <ul class='about-company__advantages-list'>
-            <li class='about-company__advantages-item'>
-              <h3 class='about-company__advantages-subitem'>Надежность и гарантия</h3>
-              <p class='about-company__advantages-text'>Срок службы конструкций изготовленных нашей компанией исчисляется десятками лет.</p>
+          <h1 class='catalog__title title-decorate title-decorate--catalog'>Типы лестниц</h1>
+          <div class='type-ladder'>
+          <ul class='type-ladder__list type-ladder__list--catalog'>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-1.png' srcset='img/index/type-ladder/slider-img-1@2x.png 2x' alt='прямая лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Прямая лестница</h3>
+                <p class='type-ladder__price'>от <b>18 000 </b>₽ за м. п.</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
             </li>
-            <li class='about-company__advantages-item'>
-              <h3 class='about-company__advantages-subitem'>Скорость работы</h3>
-              <p class='about-company__advantages-text'>В кратчайшие сроки осуществляем проектирование, изготовление и монтаж монолитных лестниц.</p>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-2.png' srcset='img/index/type-ladder/slider-img-2@2x.png 2x' alt='Забежная лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Забежная лестница</h3>
+                <p class='type-ladder__price'>от <b>27 000</b> ₽ за м. п.</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
             </li>
-            <li class='about-company__advantages-item'>
-              <h3 class='about-company__advantages-subitem'>Бесплатный замер</h3>
-              <p class='about-company__advantages-text'>Выезд специалиста компании на замер и расчет стоимости будущей конструкции — за наш счет.</p>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-3.png' srcset='img/index/type-ladder/slider-img-3@2x.png 2x' alt='Винтовая лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Винтовая лестница</h3>
+                <p class='type-ladder__price'>от <b>30 000</b> ₽ за м. п.</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
+            </li>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-4.png' srcset='img/index/type-ladder/slider-img-4@2x.png 2x' alt='Фасадная лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Фасадная лестница</h3>
+                <p class='type-ladder__price'>от <b>50 000</b> ₽ за м. п.</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
+            </li>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-5.png' srcset='img/index/type-ladder/slider-img-5@2x.png 2x' alt='Зеркальная лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Зеркальная лестница</h3>
+                <p class='type-ladder__price'>от <b>45 000</b> ₽ за м. п.</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
+            </li>
+            <li class='type-ladder__item'>
+              <img class='type-ladder__img' width='294' height='270' src='img/index/type-ladder/slider-img-6.png' srcset='img/index/type-ladder/slider-img-6@2x.png 2x' alt='Индивидуальная лестница'>
+              <div class='type-ladder__description'>
+                <h3 class='type-ladder__subtitle'>Индивидуальная</h3>
+                <p class='type-ladder__price'>Цена договорная</p>
+                <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              </div>
             </li>
           </ul>
         </div>
-      </div>
-    </section>
-
-    <section class='principles'>
-      <div class='principles__container'>
-        <h2 class='principles__title title-decorate'>Основные принципы в работе</h2>
-        <ul class='principles__list'>
-          <li class='principles__item'>
-            <h3 class='principles__subtitle'>Комплексный подход<br> на каждом этапе</h3>
-            <p class='principles__description'>Все работы по изготовлению монолитных железобетонных лестниц наша компания выполняет комплексно — начиная с проекта лестницы, подготовки всех нужных материалов, ее изготовления и заканчивая техническим надзором за этапами монтажа.</p>
-          </li>
-          <li class='principles__item'>
-            <h3 class='principles__subtitle'>Ориентированность<br> на конечного пользователя</h3>
-            <p class='principles__description'>При составлении проекта будущей лестницы мы учитываем множество связанных между собой факторов, влияющих на удобство последующего использования лестницы. Конечно не забывая о пожеланиях заказчика
-              и последних мировых тенденциях в области технологий строительства.</p>
-          </li>
-          <li class='principles__item'>
-            <h3 class='principles__subtitle'>Профессионализм<br> и качество</h3>
-            <p class='principles__description'>За время работы мы сумели зарекомендовать себя исключительно с положительной стороны, а список довольных клиентов постоянно пополняется. О чем свидетельствуют многочисленные позитивные отзывы клиентов на сайте, форумах в интернете, обсуждениях
-              в социальных сетях.</p>
-          </li>
-        </ul>
+        </div>
       </div>
     </section>
 
