--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
               <a class='navigation__link' href='company.html'>О компании</a>
             </li>
             <li class='navigation__item'>
-              <a class='navigation__link' href='#'>Каталог</a>
+              <a class='navigation__link' href='catalog.html'>Каталог</a>
             </li>
             <li class='navigation__item'>
               <a class='navigation__link' href='#'>Примеры работ</a>
