Сверстана страница "Забежная лестница"

--- a/source/index.html
+++ b/source/index.html
@@ -139,7 +139,7 @@
             <div class='type-ladder__description'>
               <h3 class='type-ladder__subtitle'>Забежная лестница</h3>
               <p class='type-ladder__price'>от <b>27 000</b> ₽ за м. п.</p>
-              <a class='type-ladder__link btn-main-style' href='#'>Подробнее</a>
+              <a class='type-ladder__link btn-main-style' href='winder-ladder.html'>Подробнее</a>
             </div>
           </li>
           <li class='type-ladder__item'>
