Стилизована мобильная версия страницы "Забежная лестница"

--- a/source/winder-ladder.html
+++ b/source/winder-ladder.html
@@ -89,14 +89,14 @@
                 <img class='winder-ladder__img' src='img/winder-ladder/winder-ladder-mobile.jpg' srcset='img/winder-ladder/winder-ladder-mobile@2x.jpg 2x' width='420' height='370' alt=''>
               </picture>
             </div>
-            <div>
+            <div class='winder-ladder__wrapper-inner'>
               <h2 class='winder-ladder__subtitle'>Забежная лестница</h2>
               <p class='winder-ladder__price'>от <b>27 000</b> ₽ за м. п.</p>
               <p class='winder-ladder__text'>Cтоимость указана за метр подъема, исходя из средней статистической цены наших
                 клиентов и может меняться
                 в зависимости от ваших размеров! Для уточнения цены лестницы — сделайте заказ или оставьте заявку
                 на рассчет стоимости.</p>
-              <p class='winder-ladder__price'>срок изготовления: <b>от 5-ти дней</b></p>
+              <p class='winder-ladder__days'>Cрок изготовления: <b>от 5-ти дней</b></p>
               <button class='winder-ladder__btn btn-main-style' type='button'>Оставить заявку</button>
               <p class='winder-ladder__description'>Основные причины, почему забежная лестница с поворотом пользуется
                 популярностью, несколько:</p>
